--- a/partials/courses.html
+++ b/partials/courses.html
@@ -1,7 +1,7 @@
 <div ng-show="courses.length">
   <h1>Here are all your courses:</h1>
   <ul>
-    <li ng-repeat="item in courses"><a ui-sref="course.students({ courseId: item.id})">{{ item.name }}</a></li>
+    <li ng-repeat="item in courses"><a ui-sref="courses.students({ courseId: item.id})">{{ item.name }}</a></li>
   </ul>
 </div>
 
